--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,7 @@ composer.phar
 
 # phpunit itself is not needed
 phpunit.phar
-# local phpunit config
-/phpunit.xml
+.phpunit.result.cache
 
 tests/_output/*
 tests/_support/_generated
